tests/fail/enum_duplicate_key.py
from enum import IntEnum


class Cardinal(IntEnum):
    North = 1
    South = 2
    East = 3
    West = 4
    North = 5
